--- a/Perspective_Android/app/src/main/res/values/strings.xml
+++ b/Perspective_Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PERSPECTIVE</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_camera">Camera</string>
+    <string name="title_more">More</string>
 </resources>
